WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182810
Default definition of InjectedBundle::PlatformBundle should not be Windows-specific.
https://bugs.webkit.org/show_bug.cgi?id=182810
Summary
Default definition of InjectedBundle::PlatformBundle should not be Windows-sp...
Ross Kirsling
Reported
2018-02-14 14:47:07 PST
Default definition of InjectedBundle::PlatformBundle should not be Windows-specific.
Attachments
Patch
(1.33 KB, patch)
2018-02-14 14:49 PST
,
Ross Kirsling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ross Kirsling
Comment 1
2018-02-14 14:49:12 PST
Created
attachment 333846
[details]
Patch
Ross Kirsling
Comment 2
2018-02-14 14:52:32 PST
This fix is a follow-up to
https://bugs.webkit.org/show_bug.cgi?id=182679
.
Michael Catanzaro
Comment 3
2018-02-14 18:52:06 PST
Comment on
attachment 333846
[details]
Patch Oops This one is a build fix, so I think I'm on safer ground to give r+ here.
WebKit Commit Bot
Comment 4
2018-02-14 18:56:02 PST
Comment on
attachment 333846
[details]
Patch Clearing flags on attachment: 333846 Committed
r228502
: <
https://trac.webkit.org/changeset/228502
>
WebKit Commit Bot
Comment 5
2018-02-14 18:56:03 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-02-14 18:57:32 PST
<
rdar://problem/37556959
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug