Default definition of InjectedBundle::PlatformBundle should not be Windows-specific. https://bugs.webkit.org/show_bug.cgi?id=182810

Reviewed by Michael Catanzaro.

This branch was added in r228455, but should not be limited to OS(WINDOWS).

* WebProcess/InjectedBundle/InjectedBundle.h:


Canonical link: https://commits.webkit.org/198578@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228502 268f45cc-cd09-0410-ab3c-d52691b4dbfc