Source/WebKit/WebProcess/InjectedBundle/InjectedBundle.h
@@ -62,7 +62,7 @@ namespace WebKit {
 typedef NSBundle *PlatformBundle;
 #elif USE(GLIB)
 typedef ::GModule* PlatformBundle;
-#elif OS(WINDOWS)
+#else
 typedef void* PlatformBundle;
 #endif
 
